--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/wandealves/lista-compra#readme",
   "dependencies": {
+    "consign": "^0.1.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2"
   },
