feat: criação usuário e login

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,12 @@ PORT=3333
 ## Postgres
 
 CONNECTIONSTRING=postgres://postgres:4y7sV96vA9wv46VR@localhost:5432/listaCompra
+
+# Auth
+
+AUTH_SALT=16
+
+# Token
+
+JWT_SECRET=9b6e6876-0818-4564-bf5e-7c53ab01cd96
+JWT_EXPIRESIN=28800
